Fix the problem where the value of slider would be out of bounds.

--- a/frontend/src/scss/slider.scss
+++ b/frontend/src/scss/slider.scss
@@ -3,6 +3,7 @@
 
 .slider {
   position: relative;
+  cursor: pointer;
 }
 
 .slider__track {
@@ -37,16 +38,6 @@
 .slider__wrapper {
   display: grid;
   row-gap: 15px;
-  cursor: pointer;
-}
-.slider__wrapper--dragging {
-  cursor: grabbing !important;
-  .slider__handle {
-    cursor: grabbing !important;
-  }
-  .slider__track {
-    cursor: grabbing !important;
-  }
 }
 
 .slider__icons {
